correction meilleurs scores

--- a/CubeJump/index.html
+++ b/CubeJump/index.html
@@ -96,9 +96,9 @@
             <div id="perdu">
                 <h1>Vous avez perdu</h1>
                 <h2 id="scorePerdu"></h2>
-                <input type="button" value="Rejouer" onclick="Spawn();" /><br/><br/>         
+                <input type="button" value="Rejouer" onclick="MeilleursScores();Spawn();" /><br/><br/>         
                 <input type="button" value="Personnaliser" onclick="Personnaliser()" /> <br/><br/>           
-                <input type="button" value="Retour" onclick="Retour()" /><br/><br/>           
+                <input type="button" value="Retour" onclick="MeilleursScores();Retour()" /><br/><br/>           
                 <input type="button" value="Quitter" onclick="window.close()" />            
             </div>
 
